--- a/src/index.css
+++ b/src/index.css
@@ -23,14 +23,13 @@ h1, h2, h3, h4, h5, h6 {
     scroll-behavior: smooth;
     scroll-padding-top: 75px;
     color: black;
-    background-color: rgb(255, 255, 255) !important;
+    background-color: rgb(228, 226, 226);
   }
   body {
     font-weight: 400;
     overflow-x: hidden;
     position: relative;
     font-family: 'Roboto', sans-serif;
-    background-color: #121212 !important;
     color: black !important;
   
   }
@@ -74,9 +73,9 @@ nav.navbar {
     width: 80px;
   }
   
-  nav.navbar.scrolled {
-    padding: 0px 0;
-    background-color: #f7f7f7;
+  .navbar.scrolled {
+    /* padding: 0px 0; */
+    background-color: rgb(247, 239, 239);
   }
   .scrolled .Brand img {
     margin-top: -50px;
@@ -188,7 +187,7 @@ nav.navbar {
     top: -2px;
   }
   nav.navbar .navbar-toggler-icon:focus {
-      border-bottom: 2px solid #fff;
+      border-bottom: 2px solid #c4bebe;
   }
   nav.navbar .navbar-toggler-icon:after,
   nav.navbar .navbar-toggler-icon:before {
@@ -217,6 +216,12 @@ nav.navbar {
   }
   nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
       border-color: transparent;
+  }
+  /**********************************************************/
+/************************* ACCUEIL **************************/
+/************************************************************/
+
+
 /**********************************************************/
 /********************** RESPONSIVE ************************/
 /**********************************************************/
@@ -234,4 +239,3 @@ nav.navbar {
     
     
   }
-} 
