--- a/src/styles/CarteComponent.module.css
+++ b/src/styles/CarteComponent.module.css
@@ -83,10 +83,10 @@
     margin-top: 40px;
     display: flex;
     justify-content: center;
-    gap: 60px;
+    gap: 40px;
 }
 .smallMenus div {
-    margin: 10px;
+    margin: 8px;
 }
 
 .tacosMenu div {
@@ -155,7 +155,7 @@
 }
 
 .sandWichesCenter img , .middle img{
-    max-height: 100px;
+    max-height: 400px;
 }
 .sandwichTacos {
     font-weight: 700;
@@ -173,17 +173,65 @@
     display: block !important;
 }
 .sandwichBarquette > div > :last-child {
-    margin-left: 0; /* Resetting the margin-left to its initial value */
-  }
-  
+    margin-left: 0;
+}
 
 /* ********************RESPONSIVE******************* */
-@media screen and (max-width: 700px) {
-    .allCartes ul {
-        background-color: rgb(247, 241, 241);
-        padding: 30px;
+@media screen and (max-width: 1024px) {
+    .souceList {
+        gap: 5px;
+        padding: 15px 0 30px;
     }
+    .allCartes ul li {
+        margin: 30px 20px;
+    }
+    .allCartes {
+        margin-top: 30px;
+    }
+    .allCartes h1 {
+        margin-bottom: 20px;
+    }
+    .allCartes p {
+        font-size: 13px;
+    }
+    .smallMenus {
+        margin-top: 20px;
+        gap: 0px;
+    }
+    .smallMenus div {
+        margin: 3px;
+    }
+    .menuRight div {
+        padding: 12px;
+    }
+    .sandWichesCenter img , .middle img{
+        max-height: 180px;
+    }
+    .asideLeftCenter div {
+        padding: 10px;
+    }
+    .sandwichBarquette div {
+        gap: 8px;
+    }
+    .screen1024 h2 {
+        padding: 20px;
+    }
+    .screen1024 div {
+        margin: 20px;
+    }
+}
 
+@media screen and (max-width: 800px) {
+    .souceList p {
+        font-size: 10px;
+        gap: 3px;
+    }
+    .allCartes ul {
+        padding: 20px;
+    }
+    .allCartes ul li {
+        margin: 0px 0px;
+    }
     .allCartes ul li {
         margin-top: 40px;
         padding: 20px;
@@ -194,21 +242,8 @@
         text-indent: 25px;
     }
 
-    .MenuCenter {
-        order: -1 !important;
-    }
-
-    .MenuRight {
-        order: 0 !important;
-    }
-
-    .menuLeft {
-        order: 1 !important;
-    }
-
     .menuContainer {
         display: block;
-        /* Change to block display */
     }
 
     .MenuCenter {
@@ -241,7 +276,19 @@
     }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 414px) {
+    .allCartes ul li {
+        margin-top: 20px !important;
+    }
+    .allCartes h1 {
+        margin-bottom: 0px;
+    }
+    .allCartes {
+        margin-top: 0px;
+    }
+    #apropos h2 {
+        margin-top: 0px;
+    }
     .allCartes h2 {
         font-size: 22px;
     }
@@ -253,4 +300,13 @@
         gap: 10px;
         justify-content: center;
     }
+    .allCartes p {
+        font-size: 15px;
+    } 
+}
+
+@media screen and (max-width: 375px) {
+    .allCartes p {
+        font-size: 13px;
+    } 
 }
