--- a/src/styles/CarteComponent.module.css
+++ b/src/styles/CarteComponent.module.css
@@ -189,7 +189,7 @@
 
 .dessert {
 
-    background-color: #1b162e;
+    background-color: rgb(28, 23, 46);
     border: 5px dotted #ffffffd3; 
     padding: 40px;
 }
