--- a/src/index.css
+++ b/src/index.css
@@ -211,6 +211,17 @@ nav.navbar {
       border-color: transparent;
   }
 /************ Contact Css ************/
+.contactDetails {
+}
+
+.contactDetails p {
+  margin: 10px 0;
+  padding: 10px;
+}
+.contactDetails img {
+  margin-top: 20px;
+}
+
 .contact {
   background: linear-gradient(90.21deg, rgba(218, 215, 215, 0.5) -5.91%, rgba(191, 190, 197, 0.5) 111.58%);
   padding: 60px 0 200px 0;
@@ -355,5 +366,11 @@ nav.navbar {
       }
       .contact {
         padding: 10px 0 30px 0;
+      }
+      .contactDetails {
+        text-align: center;
+      }
+      .contactDetails img {
+        max-width: 200px;
       }
   }
